Should have fixed weird scrolling issues on mobile

--- a/src/react/flotion/src/App.css
+++ b/src/react/flotion/src/App.css
@@ -173,3 +173,7 @@
 .yellow .euiStat__title {
     color: gold !important;
 }
+
+.parameters.container {
+    height: calc(var(--vh, 1vh) * 100);
+}
